Rename contact form

--- a/public/form.html
+++ b/public/form.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head></head>
 <body>
-  <form netlify>
-    <input type="hidden" name="form-name" value="contact">
+  <form name="contact" netlify>
     <input type="text" name="name">
     <input type="text" name="company">
     <input type="text" name="phone">
