--- a/public/form.html
+++ b/public/form.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head></head>
 <body>
-  <form name="contact" netlify>
+  <form name="contact" netlify netlify-honeypot="topic">
+    <input type="text" name="topic" />
     <input type="text" name="name">
     <input type="text" name="company">
     <input type="text" name="phone">
